java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testImportBeforeCreateElement-hints.pass
Add import for javax.swing.SwingUtilities
Create field runnable in org.netbeans.test.java.hints.ImportBeforeCreateElement
Create parameter runnable
Create local Variable runnable
